@@ -1,3 +1,7 @@
+2009-04-29  Ulrich Drepper  <drepper@redhat.com>
+
+	* elflint.c (check_symtab): Add tests of st_other field.
+
 2009-01-23  Roland McGrath  <roland@redhat.com>
 
 	* configure.ac (zlib check): Check for gzdirect, need zlib >= 1.2.2.3.
